<resources>
    <string name="app_name">Angkol\'sKitchenApp</string>
    <string name="your_order">Your Orders</string>
    <string name="order_number">Order #1</string>
    <string name="order_status">Processing</string>
    <string name="phone_number">Phone</string>
    <string name="order_address">Address</string>
    <string name="payment_method">COD</string>
    <string name="order_on_txt">Order on</string>
    <string name="order_date">25/09/2021</string>
    <string name="order_total_price">Php 300.00</string>
    <string name="num_of_items">Num of Item 2</string>
    <string name="place_order_message">Your order will be delivered to:</string>
    <string name="check_out_button_label">CHECK OUT</string>
    <string name="confirm_button_label">Confirm</string>
    <string name="food_cart_label">ANGKOL\'S CART</string>
    <string name="after_purchase_message">THANK YOU FOR ORDERING!</string>
    <string name="order_status_label">Processing</string>
    <string name="order_items">Ordered Items</string>
    <string name="about_us">About Us</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">profile</string>
    <string name="category">category</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_products">New Products</string>
    <string name="my_orders">My Orders</string>
    <string name="my_carts">My Carts</string>
    <string name="offers">Offers</string>
    <string name="about">About</string>
    <string name="notification_text">"Get ready your order is on the way "</string>
    <string name="notification_title">Nice Choice Ka-Angkol !</string>
    <string name="about_message1">Hi mga ka-Angkols! Welcome to our Kitchen, our kitchen is a one stop shop based on Quezon City that offers a variety of declicious meals and delicacies such as silog meals, pastas, burgers, appetizers up to milk teas and pastries that are charged at an affordable price. We also do catering services, so if ineed of delicious and affordable meals for a party or an event we gotchu :)</string>
    <string name="about_message2">Despite being in the middle of a pandemic, Angkol’s Kitchen makes sure that your safety is of utmost importance by following covid-19 safety protocls so do not fret and head on out to our kitchen, see you mga ka-Angkol’s!</string>
</resources>