<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.angkolskitchenapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.angkolskitchenapp.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.angkolskitchenapp.ui.category.CategoryFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/nav_offers"
        android:name="com.example.angkolskitchenapp.OfferFragment"
        android:label="@string/offers"
        tools:layout="@layout/fragment_offers" />
    <fragment
        android:id="@+id/nav_new_products"
        android:name="com.example.angkolskitchenapp.NewProductFragment"
        android:label="@string/new_products"
        tools:layout="@layout/fragment_new_product" />
    <fragment
        android:id="@+id/nav_my_orders"
        android:name="com.example.angkolskitchenapp.MyOrderFragment"
        android:label="@string/my_orders"
        tools:layout="@layout/fragment_my_order" />
    <fragment
        android:id="@+id/nav_my_carts"
        android:name="com.example.angkolskitchenapp.MyCartFragment"
        android:label="@string/my_carts"
        tools:layout="@layout/fragment_my_cart" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.angkolskitchenapp.AboutFragment"
        android:label="About"
        tools:layout="@layout/fragment_about" />
</navigation>