<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="10"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="10">

            <TextView
                android:id="@+id/order_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/order_number"
                android:textSize="22sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

            <TextView
                android:id="@+id/order_status"
                android:layout_width="wrap_content"
                android:textColor="@color/bt_border_color"

                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/order_status" />

                <TextView
                    android:id="@+id/payment_method"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="225dp"
                    android:layout_marginLeft="225dp"
                    android:text="@string/payment_method"
                    android:textStyle="italic" />
            </LinearLayout>
            <TextView
                android:id="@+id/phone_number"
                android:text="@string/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/order_address"
                android:text="@string/order_address"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/order_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/order_items"
                android:textStyle="bold" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                // image icon for order

                <TextView
                    android:id="@+id/order_on_txt"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/order_on_txt" />

                <TextView
                    android:id="@+id/order_date"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:text="@string/order_date"
                    android:textSize="14sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/order_total_price"
                    android:layout_width="215dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/order_total_price"
                    android:textColor="@color/teal_200"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/number_of_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/num_of_items" />


        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>